@@ -239,6 +239,7 @@ enum
    WXMENU_MSG_SEP4,
 
    WXMENU_MSG_FLAG,
+   WXMENU_MSG_MARK_ANSWERED,
    WXMENU_MSG_MARK_READ,
    WXMENU_MSG_MARK_UNREAD,
    WXMENU_MSG_SEP5,
