@@ -9,6 +9,7 @@
 Release 0.67 'Constance' ??? ??, 2005
 -------------------------------------
 
+2005-09-24 VZ: added "Mark answered" command
 2005-07-05 VZ: multiple config files for sharing options between installations
 2005-06-24 VZ: automatically select the viewer best fit for the shown message
 2005-05-15 VZ: added autocollecting of addresses in outgoing mail
